--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
         </div>
       </div>
     </div>
-      <script src="./index.js" type="text/javascript"></script>
+      <script src="./bundle.js" type="text/javascript"></script>
     </body>
 </html>
